# workshop

./: .gitignore
app-vue/: .env  package-lock.json  package.json
app-vue/public/: index.html
app-vue/src/: App.vue  cyrpto-js.d.ts  main.ts
app-vue/src/components/: Header.vue  ListGroup.vue  Login.vue  Signin.vue  Upload.vue
app-vue/src/constants/: Constants.ts
app-vue/src/store/: index.ts
app-vue/src/store/auth/: auth-action-types.ts  auth-module.store.ts  auth-mutation-types.ts
app-vue/src/store/files/: files-action-types.ts  files-module.store.ts  files-mutation-types.ts
rust-backend/: .env  Cargo.toml  docker-compose.yml
rust-backend/migrations/1970-01-01-000000_movine_init/: down.sql  up.sql
rust-backend/migrations/2021-11-23-094327_base/: down.sql  up.sql
rust-backend/src/: auth.rs  db.rs  environment.rs  error.rs  filters.rs  handlers.rs  main.rs  routes.rs
rust-backend/src/model/: file.rs  user.rs
